WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124541
At some scales, opaque compositing layers have garbage pixels around the edges
https://bugs.webkit.org/show_bug.cgi?id=124541
Summary
At some scales, opaque compositing layers have garbage pixels around the edges
Simon Fraser (smfr)
Reported
2013-11-18 14:58:41 PST
At some scales, opaque compositing layers have garbage pixels around the edges
Attachments
Patch
(8.95 KB, patch)
2013-11-18 15:02 PST
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-11-18 15:02:41 PST
Created
attachment 217240
[details]
Patch
Simon Fraser (smfr)
Comment 2
2013-11-18 15:31:10 PST
https://trac.webkit.org/r159463
Simon Fraser (smfr)
Comment 3
2014-01-02 17:10:44 PST
***
Bug 123054
has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 4
2014-01-02 17:12:20 PST
<
rdar://problem/15741741
>
Simon Fraser (smfr)
Comment 5
2014-01-10 14:28:32 PST
***
Bug 126783
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug