Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp
@@ -70,6 +70,20 @@ static const int cMaxLayerTreeDepth = 250;
 // of 250ms. So send a very small value instead.
 static const float cAnimationAlmostZeroDuration = 1e-3f;
 
+static inline bool isIntegral(float value)
+{
+    return static_cast<int>(value) == value;
+}
+
+static float clampedContentsScaleForScale(float scale)
+{
+    // Define some limits as a sanity check for the incoming scale value
+    // those too small to see.
+    const float maxScale = 10.0f;
+    const float minScale = 0.01f;
+    return std::max(minScale, std::min(scale, maxScale));
+}
+
 static bool isTransformTypeTransformationMatrix(TransformOperation::OperationType transformType)
 {
     switch (transformType) {
@@ -1118,7 +1132,7 @@ void GraphicsLayerCA::updateRootRelativeScale(TransformationMatrix* transformFro
     
     if (rootRelativeScaleFactor != m_rootRelativeScaleFactor) {
         m_rootRelativeScaleFactor = rootRelativeScaleFactor;
-        m_uncommittedChanges |= ContentsScaleChanged;
+        m_uncommittedChanges |= ContentsScaleChanged | ContentsOpaqueChanged;
     }
 }
 
@@ -1301,8 +1315,9 @@ void GraphicsLayerCA::commitLayerChangesBeforeSublayers(CommitState& commitState
     if (m_uncommittedChanges & ContentsVisibilityChanged)
         updateContentsVisibility();
 
+    // Note that contentsScale can affect whether the layer can be opaque.
     if (m_uncommittedChanges & ContentsOpaqueChanged)
-        updateContentsOpaque();
+        updateContentsOpaque(pageScaleFactor);
 
     if (m_uncommittedChanges & BackfaceVisibilityChanged)
         updateBackfaceVisibility();
@@ -1565,14 +1580,21 @@ void GraphicsLayerCA::updateContentsVisibility()
     }
 }
 
-void GraphicsLayerCA::updateContentsOpaque()
+void GraphicsLayerCA::updateContentsOpaque(float pageScaleFactor)
 {
-    m_layer->setOpaque(m_contentsOpaque);
+    bool contentsOpaque = m_contentsOpaque;
+    if (contentsOpaque) {
+        float contentsScale = clampedContentsScaleForScale(m_rootRelativeScaleFactor * pageScaleFactor * deviceScaleFactor());
+        if (!isIntegral(contentsScale))
+            contentsOpaque = false;
+    }
+    
+    m_layer->setOpaque(contentsOpaque);
 
     if (LayerMap* layerCloneMap = m_layerClones.get()) {
         LayerMap::const_iterator end = layerCloneMap->end();
         for (LayerMap::const_iterator it = layerCloneMap->begin(); it != end; ++it)
-            it->value->setOpaque(m_contentsOpaque);
+            it->value->setOpaque(contentsOpaque);
     }
 }
 
@@ -2303,12 +2325,12 @@ bool GraphicsLayerCA::getTransformFromAnimationsWithMaxScaleImpact(const Transfo
                 const Vector<TransformationMatrix>& matrices = it->value;
                 
                 for (size_t i = 0; i < matrices.size(); ++i) {
-                    TransformationMatrix roootRelativeTransformWithAnimation = parentTransformFromRoot;
+                    TransformationMatrix rootRelativeTransformWithAnimation = parentTransformFromRoot;
                     TransformationMatrix layerTransformWithAnimation = layerTransform(m_position, &matrices[i]);
 
-                    roootRelativeTransformWithAnimation.multiply(layerTransformWithAnimation);
+                    rootRelativeTransformWithAnimation.multiply(layerTransformWithAnimation);
                     
-                    float rootRelativeScale = maxScaleFromTransform(roootRelativeTransformWithAnimation);
+                    float rootRelativeScale = maxScaleFromTransform(rootRelativeTransformWithAnimation);
                     if (rootRelativeScale > maxScale) {
                         maxScale = rootRelativeScale;
                         maxScaleTransform = matrices[i];
@@ -2813,15 +2835,6 @@ GraphicsLayerCA::LayerMap* GraphicsLayerCA::animatedLayerClones(AnimatedProperty
     return (property == AnimatedPropertyBackgroundColor) ? m_contentsLayerClones.get() : primaryLayerClones();
 }
 
-static float clampedContentsScaleForScale(float scale)
-{
-    // Define some limits as a sanity check for the incoming scale value
-    // those too small to see.
-    const float maxScale = 10.0f;
-    const float minScale = 0.01f;
-    return std::max(minScale, std::min(scale, maxScale));
-}
-
 void GraphicsLayerCA::updateContentsScale(float pageScaleFactor)
 {
     float contentsScale = clampedContentsScaleForScale(m_rootRelativeScaleFactor * pageScaleFactor * deviceScaleFactor());
@@ -3272,12 +3285,7 @@ void GraphicsLayerCA::deviceOrPageScaleFactorChanged()
 
 void GraphicsLayerCA::noteChangesForScaleSensitiveProperties()
 {
-    noteLayerPropertyChanged(GeometryChanged | ContentsScaleChanged);
-}
-
-static inline bool isIntegral(float value)
-{
-    return static_cast<int>(value) == value;
+    noteLayerPropertyChanged(GeometryChanged | ContentsScaleChanged | ContentsOpaqueChanged);
 }
 
 void GraphicsLayerCA::computePixelAlignment(float pageScaleFactor, const FloatPoint& positionRelativeToBase,
